Crud De Usuarios con Video De explicacion

--- a/src/main/resources/templates/plantillas/partes.html
+++ b/src/main/resources/templates/plantillas/partes.html
@@ -10,7 +10,7 @@
     </header>
     <footer th:fragment="pie">
         <span>Andrew Licona Blanco</span>
-        <p><a href="https://www.youtube.com/">Video De Explicacion</a></p>
+        <p><a href="https://youtu.be/fqfepCdTprY">Video De Explicacion</a></p>
     </footer>
 </body>
 </html>
